<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/peakexpiratoryflowrate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.peakexpiratoryflowrate.PeakExpiratoryFlowRateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"
                    android:text="@string/pfr_header"
                    android:textSize="24sp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">
                <RadioGroup
                    android:id="@+id/pfr_radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:id="@+id/pfr_male"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:id="@+id/pfr_female"
                        android:layout_marginLeft="16dp"
                        />
                </RadioGroup>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">
                <TextView
                    android:id="@+id/pfr_age"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/pfr_age"
                    android:textColor="@color/textColor"
                    />
                <EditText
                    android:id="@+id/pfr_age_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:hint="TextField"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    android:layout_marginLeft="16dp"
                    />
                <TextView
                    android:id="@+id/pfr_age_years"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/pfr_age_ext"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">
                <TextView
                    android:id="@+id/pfr_height"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/pfr_height"
                    android:textColor="@color/textColor"
                    />
                <EditText
                    android:id="@+id/pfr_height_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:hint="TextField"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:layout_marginLeft="16dp"
                    />
                <TextView
                    android:id="@+id/pfr_height_cm"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    android:text="@string/pfr_height_ext"
                    />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp">
                <Button
                    android:id="@+id/pfr_calculate"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="@string/calculation_button"
                    android:layout_gravity="center"
                    android:textColor="@color/tabTextColor"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">
                <TextView
                    android:id="@+id/pfr_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    android:text="@string/pfr_result_title"
                    />
                <EditText
                    android:id="@+id/pfr_result"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"/>

            </TableRow>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
