<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fractionalexcretionofsodium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fractionalexcretionofsodium.FractionalExcretionOfSodiumFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fes_header"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/fes_urine_na"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fes_urine_na"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fes_urine_na_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="TextField"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fes_ext"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/fes_common_ext"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/fes_serum_na"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fes_serum_na"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fes_serum_na_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="TextField"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fes_serum_na_ext"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/fes_common_ext"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/fes_urine_cr"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fes_urine_cr"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fes_urine_cr_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="TextField"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fes_urine_cr_ext"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/fes_common_ext"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/fes_serum_cr"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fes_serum_cr"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fes_serum_cr_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="TextField"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fes_serum_cr_ext"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/fes_common_ext"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/fes_calculate"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/calculation_button"
                    android:textColor="@color/tabTextColor" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/fes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fes_result_title"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fes_result"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:visibility="invisible" />

            </TableRow>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
