<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/freewaterdeficit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.freewaterdeficit.FreeWaterDeficitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fwd_header"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <RadioGroup
                    android:id="@+id/fwd_radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fwd_radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/fwd_radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Female"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <RadioGroup
                    android:id="@+id/fwd_radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fwd_radioChild"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Child"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/fwd_radioAdult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Adult"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/fwd_radioEdlerly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Edlerly"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/fwd_current_Na"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fwd_current_Na"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fwd_current_Na_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="TextField"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fwd_current_Na_ext"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/fwd_current_Na_ext"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/fwd_idial_Na"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fwd_idial_Na"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fwd_idial_Na_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="TextField"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fwd_idial_Na_ext"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/fwd_ideal_Na_ext"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/fwd_weight"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fwd_weight"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fwd_weight_value"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="TextField"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fwd_weight_ext"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/fwd_weight_ext"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp">

                <Button
                    android:id="@+id/fwd_calculate"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/calculation_button"
                    android:textColor="@color/tabTextColor" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp">

                <TextView
                    android:id="@+id/fwd_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fwd_result_title"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/fwd_result"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:visibility="invisible" />

            </TableRow>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
